// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > should display the tooltip after focusing for 1s by default only in keyboard mode 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--visible"
  id="_r_2_-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip > should support controlling the visibility manually with the setVisible and hideTooltip returned functions 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--enter rmd-tooltip--visible"
  id="_r_6_-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip > should support controlling the visibility manually with the setVisible and hideTooltip returned functions 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--visible"
  id="_r_6_-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;
